# MiniSim

./: CMakeLists.txt  consigne.md
include/engine/: MiniSim.hpp
include/memory/: arena_allocator.h
src/: main.cpp
src/engine/: MiniSim.cpp
src/memory/: arena_allocator.c
test/: test_minisim.cpp
